--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,14 @@
   height: 50px;
   border-radius: 10px;
 }
+
+.counter-containter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+.counter-containter h2 {
+  font-size: 25px;
+}
