--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+body {
+  background: #000;
+  color: aliceblue;
+  font-family: sans-serif;
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-items: center;
 }
 .btn {
   cursor: pointer;
