--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-body {
-  background: #000;
-  color: aliceblue;
-  font-family: sans-serif;
-}
 .container {
   display: flex;
   flex-direction: column;
@@ -14,4 +9,12 @@ body {
   width: 100px;
   height: 50px;
   border-radius: 10px;
+  text-transform: capitalize;
+}
+
+.search-box {
+  width: 200px;
+  height: 25px;
+  padding: 10px;
+  border-radius: 5px;
 }
